# plugin-haskell

./: .gitignore  CMakeLists.txt  README.md  haskell.pro
.github/workflows/: build_cmake.yml  build_qmake.yml
plugins/haskell/: CMakeLists.txt  Haskell.json.in  config.pri  filecache.cpp  filecache.h  followsymbol.cpp  followsymbol.h  ghcmod.cpp  ghcmod.h  haskell.pro  haskell.qbs  haskellbuildconfiguration.cpp  haskellbuildconfiguration.h  haskellcompletionassist.cpp  haskellcompletionassist.h  haskellconstants.h  haskelldocument.cpp  haskelldocument.h  haskelleditorfactory.cpp  haskelleditorwidget.cpp  haskelleditorwidget.h  haskellhighlighter.cpp  haskellhoverhandler.cpp  haskellhoverhandler.h  haskellmanager.cpp  haskellmanager.h  haskellplugin.cpp  haskellplugin.h  haskellproject.cpp  haskellproject.h  haskellrunconfiguration.cpp  haskellrunconfiguration.h  haskelltokenizer.cpp  haskelltokenizer.h  optionspage.cpp  stackbuildstep.cpp  stackbuildstep.h
tests/auto/: auto.pro
tests/auto/tokenizer/: CMakeLists.txt  tokenizer.pro
